# ZPL2Python

./: CMakeLists.txt  GLOBAL.ZPL  ZPL2Python.py  bindings.cpp  build.sh  func_config.json  function_loader.py  grammer.lark  lex_grammer.py  log.txt  output.py  output.txt  requirements.txt  statements.py  test.py  test.zpl  test1.py  test1.zpl  test2.py  test2.zpl  transformer.py  transformer2.py
config/: builtin_config.json  example_config.json  func_config.json
macros/: A.json  B.json  builtin_config.json  functions.json  macro_dict.json
macros/lib/: A.json  B.json
mylib/include/: mylib.h
mylib/src/: A.c++  B.c++  C.c++
src/: base_grammer.lark  base_grammer_1.lark  base_grammer_2.lark  basictoken.py  build_grammar.py  config.py  function_loader.py  grammer.lark  grammer_1.lark  ind_tree_node.py  macro_code_generator.py  macro_loader.py  macro_manager.py  macro_preprocess.py  macro_processor.py  marco_loader.py  output.py  test.py  test.zpl  test2.py  test2.zpl  test_runner.py  tools.py  transformer.py  translator.py
src/test/py_code/: test1.py
src/test/zpl_code/: test1.zpl  test2.zpl
src_include_ok/: 2-test.py  CMakeLists.txt  compile_pybind11.sh
src_include_ok/include/: calculator.h  example.h
src_include_ok/src/: bindings.cpp  calculator.cpp  example.cpp
temp/: json2py.py
test/: test_runner.py
test/zpl_code/: test1.zpl
